# elena-storage-s3

./: .gitignore  Makefile  README.md  requirements.txt  requirements_test.txt  setup.cfg  setup.py
elena_storage_s3/adapters/storage_manager/: s3_storage_manager.py
test/integration/adapters/storage_manager/: test_s3_storage_manager.py  tets_s3_storage_manager.py
test/integration/test_home/: config.yaml  secrets-sample.yaml  strategies.yaml
