[metadata]
name = elena_notifications_telegram
version = 0.0.1
author = "L Software Foundation"
author_email = "fransimo@gmail.com, pjover@gmail.com"
description = Telegram metrics for L
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cyrpto, trade, bot, telegram
license = MIT
url =https://github.com/Pasta-fantasia
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Topic :: Other/Nonlisted Topic
    Programming Language :: Python :: 3

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
# https://github.com/pypa/setuptools/issues/1951
# install_requires = file: requirements.txt

[options.entry_points]
# this is only for testing the CLI version
# console_scripts =
#     elena_telegram = elena_metrics_telegram.entrypoint:main

[options.package_data]
* = *.sql, *.csv, *.yaml, *.yml